--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Drafter</string>
+
+    <string name="fragment_home">Home</string>
+    <string name="fragment_draw">Draw</string>
+    <string name="fragment_settings">Settings</string>
+
+    <string name="button_new">New</string>
 </resources>
